--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -193,6 +193,69 @@
         background-size: contain;
     }
 
+    
+
+}
+.evolutionSlider {
+    margin-top: 5rem;
+    .swiper-wrapper {
+        padding: 4rem 0 2rem;
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 4.8rem;
+        width: 100%;
+        height: 0;
+        border-top: .4rem solid #D9D9D9;
+    }
+    .nav_btn {
+        position: absolute;
+        top: 2.7rem;
+        z-index: 99;
+
+        svg {
+            transition: all .2s ease;
+            @include xl-down {
+                width: 2rem;
+                height: 4.5rem;
+            }
+        }
+
+        &.swiper-button-disabled {
+            pointer-events: none;
+            svg {
+                opacity: 0;
+                visibility: hidden;
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                width: .4rem;
+                height: 100%;
+                background-color: #d9d9d9;
+                transition: all .2s ease;
+            }
+        }
+    }
+    .button-prev {
+        left: 0;
+        &.swiper-button-disabled {
+            &::before {
+                left: 0;
+            }
+        }
+    }
+    .button-next {
+        right: 0;
+
+        &.swiper-button-disabled {
+            &::before {
+                right: 0;
+            }
+        }
+    }
     .evolution-item {
         transform-origin: top;
         transition: all .3s ease;
@@ -228,69 +291,6 @@
                 opacity: 1;
             }
         }
-    }
-
-    .swiper {
-        margin-top: 5rem;
-        .swiper-wrapper {
-            padding: 4rem 0 2rem;
-        }
-        &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 4.8rem;
-            width: 100%;
-            height: 0;
-            border-top: .4rem solid #D9D9D9;
-        }
-        .nav_btn {
-            position: absolute;
-            top: 2.7rem;
-            z-index: 99;
-
-            svg {
-                transition: all .2s ease;
-                @include xl-down {
-                    width: 2rem;
-                    height: 4.5rem;
-                }
-            }
-
-            &.swiper-button-disabled {
-                pointer-events: none;
-                svg {
-                    opacity: 0;
-                    visibility: hidden;
-                }
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: .4rem;
-                    height: 100%;
-                    background-color: #d9d9d9;
-                    transition: all .2s ease;
-                }
-            }
-        }
-        .button-prev {
-            left: 0;
-            &.swiper-button-disabled {
-                &::before {
-                    left: 0;
-                }
-            }
-        }
-        .button-next {
-            right: 0;
-
-            &.swiper-button-disabled {
-                &::before {
-                    right: 0;
-                }
-            }
-        }
-        
     }
 }
 
