--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,49 +801,14 @@ footer .footer-bottom {
   opacity: 0.12;
   background-size: contain;
 }
-.evolution .evolution-item {
-  transform-origin: top;
-  transition: all 0.3s ease;
-}
-.evolution .evolution-item .dot {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: #D9D9D9;
-  margin: 0 auto 0.7rem;
-  transition: all 0.3s ease;
-}
-.evolution .evolution-item .content {
-  opacity: 0;
-  transition: all 0.3s ease;
-  font-size: 1.4rem;
-}
-.evolution .evolution-item p {
-  transform-origin: top;
-  transition: all 0.3s ease;
-}
-.evolution .evolution-item:hover {
-  transform: scale(1.1);
-}
-.evolution .evolution-item:hover .dot {
-  transform: scale(1.3);
-  background-color: #C89328;
-}
-.evolution .evolution-item:hover p {
-  color: #C89328;
-  transform: scale(1.2);
-  font-weight: 600;
-}
-.evolution .evolution-item:hover .content {
-  opacity: 1;
-}
-.evolution .swiper {
+
+.evolutionSlider {
   margin-top: 5rem;
 }
-.evolution .swiper .swiper-wrapper {
+.evolutionSlider .swiper-wrapper {
   padding: 4rem 0 2rem;
 }
-.evolution .swiper::before {
+.evolutionSlider::before {
   content: "";
   position: absolute;
   left: 0;
@@ -852,28 +817,28 @@ footer .footer-bottom {
   height: 0;
   border-top: 0.4rem solid #D9D9D9;
 }
-.evolution .swiper .nav_btn {
+.evolutionSlider .nav_btn {
   position: absolute;
   top: 2.7rem;
   z-index: 99;
 }
-.evolution .swiper .nav_btn svg {
+.evolutionSlider .nav_btn svg {
   transition: all 0.2s ease;
 }
 @media screen and (max-width: 1199px) {
-  .evolution .swiper .nav_btn svg {
+  .evolutionSlider .nav_btn svg {
     width: 2rem;
     height: 4.5rem;
   }
 }
-.evolution .swiper .nav_btn.swiper-button-disabled {
+.evolutionSlider .nav_btn.swiper-button-disabled {
   pointer-events: none;
 }
-.evolution .swiper .nav_btn.swiper-button-disabled svg {
+.evolutionSlider .nav_btn.swiper-button-disabled svg {
   opacity: 0;
   visibility: hidden;
 }
-.evolution .swiper .nav_btn.swiper-button-disabled::before {
+.evolutionSlider .nav_btn.swiper-button-disabled::before {
   content: "";
   position: absolute;
   width: 0.4rem;
@@ -881,17 +846,53 @@ footer .footer-bottom {
   background-color: #d9d9d9;
   transition: all 0.2s ease;
 }
-.evolution .swiper .button-prev {
+.evolutionSlider .button-prev {
   left: 0;
 }
-.evolution .swiper .button-prev.swiper-button-disabled::before {
+.evolutionSlider .button-prev.swiper-button-disabled::before {
   left: 0;
 }
-.evolution .swiper .button-next {
+.evolutionSlider .button-next {
   right: 0;
 }
-.evolution .swiper .button-next.swiper-button-disabled::before {
+.evolutionSlider .button-next.swiper-button-disabled::before {
   right: 0;
+}
+.evolutionSlider .evolution-item {
+  transform-origin: top;
+  transition: all 0.3s ease;
+}
+.evolutionSlider .evolution-item .dot {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  margin: 0 auto 0.7rem;
+  transition: all 0.3s ease;
+}
+.evolutionSlider .evolution-item .content {
+  opacity: 0;
+  transition: all 0.3s ease;
+  font-size: 1.4rem;
+}
+.evolutionSlider .evolution-item p {
+  transform-origin: top;
+  transition: all 0.3s ease;
+}
+.evolutionSlider .evolution-item:hover {
+  transform: scale(1.1);
+}
+.evolutionSlider .evolution-item:hover .dot {
+  transform: scale(1.3);
+  background-color: #C89328;
+}
+.evolutionSlider .evolution-item:hover p {
+  color: #C89328;
+  transform: scale(1.2);
+  font-weight: 600;
+}
+.evolutionSlider .evolution-item:hover .content {
+  opacity: 1;
 }
 
 .business-lines {
@@ -1161,17 +1162,55 @@ footer .footer-bottom {
   margin: 3rem 0;
   border-bottom: 0;
 }
+.about__us .main_tab li {
+  flex: 0 0 50%;
+}
+@media screen and (min-width: 576px) {
+  .about__us .main_tab li {
+    flex: 0 0 33%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__us .main_tab li {
+    flex: 0 0 25%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .about__us .main_tab li {
+    flex: 0 0 20%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__us .main_tab li {
+    flex: 0 0 auto;
+  }
+}
 .about__us .main_tab .nav-link {
   background-color: transparent;
   border: 0;
   border-bottom: 0.2rem solid #B6B6B6;
   color: #1F2933;
-  padding: 1.5rem 2rem;
-  font-size: 1.4rem;
+  padding: 1.2rem 1.5rem;
+  font-size: 1.25rem;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .about__us .main_tab .nav-link {
+    font-size: 1.4rem;
+    padding: 1.5rem 2rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .about__us .main_tab .nav-link {
+    padding: 1.5rem 2.25rem;
+  }
 }
 .about__us .main_tab .nav-link.active {
   color: #FFFFFF;
   background-color: #C89328;
+}
+.about__us .tab-content .page-title {
+  font-size: 2rem;
 }
 .about__us .tab-content .mission_vision_list {
   margin: 5rem 0;
@@ -1295,6 +1334,10 @@ footer .footer-bottom {
 .about__us .tab-content .leadershipTeam_tab .item .desc .name {
   font-size: 1.8rem;
   font-weight: bold;
+}
+.about__us .tab-content .subnav a {
+  padding: 1rem 2rem;
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
