--- a/assets/sass/pages/_pages.scss
+++ b/assets/sass/pages/_pages.scss
@@ -4,6 +4,11 @@
 @import "home";
 
 /*--------------------------------------------------------------
-# Home Page
+# About Page
 --------------------------------------------------------------*/
 @import "about";
+
+/*--------------------------------------------------------------
+# Contact Page
+--------------------------------------------------------------*/
+@import "contact";
