--- a/assets/sass/layouts/_page-banner.scss
+++ b/assets/sass/layouts/_page-banner.scss
@@ -1,25 +1,29 @@
 .page__banner {
-    height: 50rem;
+    height: 30rem;
     background-size: cover;
     background-position: center;
     position: relative;
     z-index: 1;
-    &::before {
+    @include lg-up {
+        height: 40rem;
+    }
+    @include xl-up {
+        height: 50rem;
+    }
+    &::before, &::after {
         content: '';
         position: absolute;
-        top: -.1rem;
         left: 0;
         right: 0;
         height: 4rem;
         background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+
+    }
+    &::before {
+        top: -.1rem;
     }
     &::after {
-        content: '';
-        position: absolute;
         bottom: -.1rem;
-        left: 0;
-        right: 0;
-        height: 4rem;
         background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
     }
 }
