--- a/assets/sass/pages/_pages.scss
+++ b/assets/sass/pages/_pages.scss
@@ -9,6 +9,16 @@
 @import "about";
 
 /*--------------------------------------------------------------
+# Jewellery Page
+--------------------------------------------------------------*/
+@import "jewellery";
+
+/*--------------------------------------------------------------
+# Automotive Page
+--------------------------------------------------------------*/
+@import "automotive";
+
+/*--------------------------------------------------------------
 # Contact Page
 --------------------------------------------------------------*/
 @import "contact";
