--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -8,3 +8,8 @@
 .font-bold {font-weight: 700;}
 .font-extrabold {font-weight: 800;}
 .font-black {font-weight: 900;}
+
+
+.text-theme {
+    color: $color__theme;
+}
