--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -391,6 +391,12 @@
     }
 
     .partner-item {
+        .logo {
+            height: 13rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
         img {
             filter: grayscale(100);
             opacity: 0.4;
