--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -2,24 +2,13 @@
     padding: 4rem 0;
 
     
-    .main_tab {
+    .main_menu, .nav-tabs {
         margin: 3rem 0;
         border-bottom: 0;
-        li {
-            flex: 0 0 50%;
-            @include sm-up {
-                flex: 0 0 33%;
-            }
-            @include md-up {
-                flex: 0 0 25%;
-            }
-            @include lg-up {
-                flex: 0 0 20%;
-            }
-            @include xl-up {
-                flex: 0 0 auto;
-            }
-        }
+        display: flex;
+        justify-content: start;
+        flex-wrap: wrap;
+        align-items: end;
         .nav-link {
             background-color: transparent;
             border: 0;
@@ -28,47 +17,36 @@
             padding: 1.2rem 1.5rem;
             font-size: 1.25rem;
             width: 100%;
+            text-align: center;
+            white-space: nowrap;
             @include xl-up {
                 font-size: 1.4rem;
-                padding: 1.5rem 2rem;
-            }
-            @include xxl-up {
-                padding: 1.5rem 2.25rem;
             }
             &.active {
-                color: $color__white;
-                background-color: $color__theme;
+                color: $color__black;
+                font-weight: bold;
+                border-color: $color__theme;
             }
         }
     }
+    .main_menu {
+        li {
+            flex: 1 1 0;
+        }
+    }
+    
     .tab-content {
-        .page-title {
-            font-size: 2rem;
-        }
-        .mission_vision_list {
-            margin: 5rem 0;
-            .title {
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-                font-weight: 600;
-                svg {
-                    max-width: 3rem;
-                }
+        .image-content {
+            height: 75%;
+            @include xxl-up {
+                padding-left: 5rem;
             }
-            li {
-                & + li {
-                    margin-top: 2rem;
-                }
+            img {
+                min-height: 100%;
+                object-fit: cover;
             }
         }
-        p {
-            font-size: 1.4rem;
-            & + p {
-                margin-top: 2rem;
-            }
-        }
+        
         .boardOfDirectors_tab {
             .row {
                 --bs-gutter-x: 2rem;
@@ -116,68 +94,109 @@
                         font-size: 1.8rem;
                         font-weight: bold;
                     }
-                    .origin {
-                        font-size: 1.5rem;                        
+                    .designation {
+                        line-height: 1.5;
                     }
+                }
+            }
+        }        
+    }
+    .corporate_profile {
+        .mission_vision_list {
+            margin: 5rem 0;
+            .title {
+                margin-bottom: 1rem;
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+                font-weight: 600;
+                svg {
+                    max-width: 3rem;
+                }
+            }
+            li {
+                & + li {
+                    margin-top: 2rem;
                 }
             }
         }
-        .leadershipTeam_tab {
-            .row {
-                --bs-gutter-x: 2rem;
-                --bs-gutter-y: 3rem;
-                @include md-up {
-                    --bs-gutter-x: 3rem;
-                }
-                @include xl-up {
-                    --bs-gutter-x: 5rem;
-                    --bs-gutter-y: 5rem;
-                }
+    }
+    .leadershipteam {
+        .row {
+            --bs-gutter-x: 2rem;
+            --bs-gutter-y: 3rem;
+            @include md-up {
+                --bs-gutter-x: 3rem;
             }
-
-            .item {
-                .thumbnail {
-                    position: relative;
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        top: -.1rem;
-                        left: 0;
-                        right: 0;
-                        height: 5rem;
-                        background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
-                    }
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        bottom: -.1rem;
-                        left: 0;
-                        right: 0;
-                        height: 5rem;
-                        background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
-                    }
-                }
-                img {
-                    width: 100%;
-                    max-height: 36rem;
-                    object-fit: cover;
-                    object-position: center;
-                }
-                .desc {
-                    padding: 1rem 0;
-                    .name {
-                        font-size: 1.8rem;
-                        font-weight: bold;
-                    }
-
-                }
+            @include xl-up {
+                --bs-gutter-x: 5rem;
+                --bs-gutter-y: 5rem;
             }
         }
-        .subnav {
-            a {
-                padding: 1rem 2rem;
-                display: block;
+        .border-tlr {
+            height: 3rem;
+            border-left: .2rem solid;
+            border-right: .2rem solid;
+            border-top: .2rem solid;
+            border-color: #C0C0C0;
+            border-radius: .5rem .5rem 0 0;
+        }
+        .border-blr {
+            height: 3rem;
+            border-left: .2rem solid;
+            border-right: .2rem solid;
+            border-bottom: .2rem solid;
+            border-color: #C0C0C0;
+            border-radius: 0 0 .5rem .5rem;
+        }
+    }
+    .leadership_item {
+        .item-title {
+            font-size: 1.8rem;
+        }
+        .thumbnail {
+            position: relative;
+            &::before {
+                content: '';
+                position: absolute;
+                top: -.1rem;
+                left: 0;
+                right: 0;
+                height: 5rem;
+                background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: -.1rem;
+                left: 0;
+                right: 0;
+                height: 5rem;
+                background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
             }
         }
+        img {
+            width: 100%;
+            max-height: 36rem;
+            object-fit: cover;
+            object-position: center;
+        }
+        .desc {
+            padding: 1rem 0;
+            .name {
+                font-size: 1.8rem;
+                font-weight: bold;
+            }
+            .designation {
+                font-size: 1.4rem;
+                line-height: 1.5;
+            }
+        }
+    }
+}
+.esg-stragety {
+    .nav-tabs {
+        position: sticky;
+        top: 12rem;
     }
 }
