--- a/assets/sass/pages/_pages.scss
+++ b/assets/sass/pages/_pages.scss
@@ -19,6 +19,11 @@
 @import "automotive";
 
 /*--------------------------------------------------------------
+# News Page
+--------------------------------------------------------------*/
+@import "news";
+
+/*--------------------------------------------------------------
 # Contact Page
 --------------------------------------------------------------*/
 @import "contact";
