--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -22,11 +22,11 @@ html {
 	}
 }
 body {
-	font-size: 1.5rem;
+	font-size: 1.4rem;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	background-color: #F5F5F5;
+	background-color: #FBFBFA;
 	font-family: $font__body;
 	padding-top: 9rem;
 	@include lg-up {
@@ -37,7 +37,7 @@ body {
 	}
 }
 p { 
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	line-height: 1.75;
 	margin: 0;
 }
