--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -1,8 +1,9 @@
 .about__us {
     padding: 4rem 0;
 
-    
-    .main_menu, .nav-tabs {
+    .main_menu,
+    .nav-tabs {
+        background-color: #f5f5f5;
         margin: 3rem 0;
         border-bottom: 0;
         display: flex;
@@ -12,7 +13,7 @@
         .nav-link {
             background-color: transparent;
             border: 0;
-            border-bottom: .2rem solid #B6B6B6;
+            border-bottom: 0.2rem solid #b6b6b6;
             color: $color__body;
             padding: 1.2rem 1.5rem;
             font-size: 1.25rem;
@@ -34,7 +35,7 @@
             flex: 1 1 0;
         }
     }
-    
+
     .tab-content {
         .image-content {
             height: 75%;
@@ -46,7 +47,7 @@
                 object-fit: cover;
             }
         }
-        
+
         .boardOfDirectors_tab {
             .row {
                 --bs-gutter-x: 2rem;
@@ -64,22 +65,30 @@
                 .thumbnail {
                     position: relative;
                     &::before {
-                        content: '';
+                        content: "";
                         position: absolute;
-                        top: -.1rem;
+                        top: -0.1rem;
                         left: 0;
                         right: 0;
                         height: 5rem;
-                        background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+                        background: linear-gradient(
+                            0deg,
+                            rgba(255, 255, 255, 0) 0%,
+                            rgba(245, 245, 245, 1) 85%
+                        );
                     }
                     &::after {
-                        content: '';
+                        content: "";
                         position: absolute;
-                        bottom: -.1rem;
+                        bottom: -0.1rem;
                         left: 0;
                         right: 0;
                         height: 5rem;
-                        background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+                        background: linear-gradient(
+                            180deg,
+                            rgba(255, 255, 255, 0) 0%,
+                            rgba(245, 245, 245, 1) 85%
+                        );
                     }
                 }
                 img {
@@ -99,7 +108,7 @@
                     }
                 }
             }
-        }        
+        }
     }
     .corporate_profile {
         .mission_vision_list {
@@ -135,19 +144,19 @@
         }
         .border-tlr {
             height: 3rem;
-            border-left: .2rem solid;
-            border-right: .2rem solid;
-            border-top: .2rem solid;
-            border-color: #C0C0C0;
-            border-radius: .5rem .5rem 0 0;
+            border-left: 0.2rem solid;
+            border-right: 0.2rem solid;
+            border-top: 0.2rem solid;
+            border-color: #c0c0c0;
+            border-radius: 0.5rem 0.5rem 0 0;
         }
         .border-blr {
             height: 3rem;
-            border-left: .2rem solid;
-            border-right: .2rem solid;
-            border-bottom: .2rem solid;
-            border-color: #C0C0C0;
-            border-radius: 0 0 .5rem .5rem;
+            border-left: 0.2rem solid;
+            border-right: 0.2rem solid;
+            border-bottom: 0.2rem solid;
+            border-color: #c0c0c0;
+            border-radius: 0 0 0.5rem 0.5rem;
         }
     }
     .leadership_item {
@@ -157,22 +166,30 @@
         .thumbnail {
             position: relative;
             &::before {
-                content: '';
+                content: "";
                 position: absolute;
-                top: -.1rem;
+                top: -0.1rem;
                 left: 0;
                 right: 0;
                 height: 5rem;
-                background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+                background: linear-gradient(
+                    0deg,
+                    rgba(255, 255, 255, 0) 0%,
+                    rgba(245, 245, 245, 1) 85%
+                );
             }
             &::after {
-                content: '';
+                content: "";
                 position: absolute;
-                bottom: -.1rem;
+                bottom: -0.1rem;
                 left: 0;
                 right: 0;
                 height: 5rem;
-                background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(245,245,245,1) 85%);
+                background: linear-gradient(
+                    180deg,
+                    rgba(255, 255, 255, 0) 0%,
+                    rgba(245, 245, 245, 1) 85%
+                );
             }
         }
         img {
@@ -194,9 +211,198 @@
         }
     }
 }
-.esg-stragety {
-    .nav-tabs {
-        position: sticky;
-        top: 12rem;
+
+.esg_strategy_mision {
+    margin: 10rem 0;
+    @include lg-down {
+        margin: 6rem 0;
+    }
+    .mision_vision {
+        background-color: #f6f5f4;
+        padding: 4rem;
+    }
+    .end-item {
+        max-width: 25rem;
+        margin: 0 auto;
+        img {
+            box-shadow: 0 0.4rem 0.8rem rgba($color__black, 0.35);
+        }
+        p {
+            margin: 2rem 0;
+            a {
+                display: block;
+            }
+        }
+    }
+    .item {
+        position: relative;
+        padding: 6rem 1.5rem;
+        z-index: 1;
+
+        .front {
+            .icon {
+                margin-bottom: 2rem;
+                svg {
+                    max-height: 4rem;
+                }
+            }
+            h5 {
+                font-size: 1.6rem;
+                font-weight: 500;
+            }
+        }
+        .back {
+            position: absolute;
+            inset: 0;
+            opacity: 0;
+            z-index: 2;
+            transition: all 0.3s;
+            background-color: $color__white;
+            @include flex-center;
+            font-size: 1.5rem;
+            padding: 3rem;
+            text-align: left;
+            transform: scale(0.8);
+            border-radius: 0.5rem;
+            overflow: hidden;
+            @include lg-down {
+                padding: 2rem;
+            }
+        }
+        &:hover {
+            .back {
+                opacity: 1;
+                visibility: visible;
+                transform: scale(1);
+            }
+        }
+    }
+}
+.commitments {
+    .item {
+        &.ungc {        
+            .links {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 2rem;
+                margin-top: 3rem;
+            }
+        }
+        & + .item {
+            margin-top: 5rem;
+        }
+        &.sdg {
+            .end-item {
+                max-width: 25rem;
+                margin: 0 auto;
+                img {
+                    box-shadow: 0 0.4rem 0.8rem rgba($color__black, 0.35);
+                }
+                p {
+                    margin: 2rem 0;
+                    a {
+                        display: block;
+                    }
+                }
+            }
+            .sdg_items {
+                display: grid;
+                gap: 1rem;
+                grid-template-columns: repeat(3, minmax(0, 1fr));
+                @include sm-up {
+                    grid-template-columns: repeat(4, minmax(0, 1fr));
+                }
+                @include md-up {
+                    grid-template-columns: repeat(6, minmax(0, 1fr));
+                }
+
+                img {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+.sustainability_committee {
+    margin: 10rem 0;
+    @include lg-down {
+        margin: 6rem 0;
+    }
+
+    .committee_item_wrapper {
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+
+        @include sm-up {
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+        @include md-up {
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+        }
+        @include lg-up {
+            gap: 3rem;
+            grid-template-columns: repeat(5, minmax(0, 1fr));
+        }
+        @include xl-up {
+            grid-template-columns: repeat(6, minmax(0, 1fr));
+        }
+    }
+    .committee_item {
+        .item-title {
+            font-size: 1.8rem;
+        }
+        .thumbnail {
+            position: relative;
+            &::before {
+                content: "";
+                position: absolute;
+                top: -0.1rem;
+                left: 0;
+                right: 0;
+                height: 5rem;
+                background: linear-gradient(
+                    0deg,
+                    rgba(255, 255, 255, 0) 0%,
+                    rgba(245, 245, 245, 1) 85%
+                );
+            }
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: -0.1rem;
+                left: 0;
+                right: 0;
+                height: 5rem;
+                background: linear-gradient(
+                    180deg,
+                    rgba(255, 255, 255, 0) 0%,
+                    rgba(245, 245, 245, 1) 85%
+                );
+            }
+        }
+        img {
+            width: 100%;
+            max-height: 36rem;
+            object-fit: cover;
+            object-position: center;
+        }
+        .desc {
+            padding: 1rem 0;
+            .name {
+                font-size: 1.4rem;
+                font-weight: bold;
+            }
+            .designation {
+                font-size: 1.3rem;
+                line-height: 1.5;
+            }
+        }
+    }
+}
+.heighlights {
+    margin: 10rem 0;
+    @include lg-down {
+        margin: 6rem 0;
     }
 }
